# nano-fingpt

./: .env.example  AAPL_10-K_1A_temp.md  README.md  ingestion.py  main.py  pyproject.toml
utils/: edgar_clinet.py  semantic_chunker.py
