[project]
name = "nano-fingpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.97.0",
    "hdbscan>=0.8.44",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.18.0",
    "sentence-transformers>=5.5.1",
    "transformers>=5.10.2",
]
